--- a/style/web.css
+++ b/style/web.css
@@ -7,6 +7,7 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 
 }
 
@@ -24,6 +25,7 @@ nav a {
     text-decoration: none;
     color: #474747;
 }
+
 
 .nav-title {
     color: var(--Dark-01, #181818);
@@ -48,4 +50,16 @@ nav a {
     padding: 15px 35px;
 
 
+}
+/* header relatef style */
+.header{
+    background-color: #fff8f3;
+}
+.banner{
+    padding: 30px 30px 30px 150px;
+    display: flex;
+    align-items: center;
+}
+.banner .profile-pic{
+    width: 500px;
 }
