--- a/style/web.css
+++ b/style/web.css
@@ -109,6 +109,10 @@ nav a {
 }
 
 /* main section style */
+main{
+   max-width: 1140px;
+   margin: o auto;
+}
 /* about section style */
 .about {
     padding: 130px;
@@ -121,4 +125,16 @@ nav a {
 text-align: center;
 font-size: 18px;
 font-weight: 400;
+}
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.about-info{
+    text-align: center;
+
+}
+#what-i-do-description{
+    padding: 30px 150px;
+    
 }
