--- a/style/web.css
+++ b/style/web.css
@@ -1,11 +1,12 @@
 body {
     font-family: 'Open Sans', sans-serif;
 }
-.section-title{
+
+.section-title {
     color: var(--Dark-01, #181818);
-text-align: center;
-font-size: 35px;
-font-weight: 700;
+    text-align: center;
+    font-size: 35px;
+    font-weight: 700;
 }
 
 nav {
@@ -109,10 +110,15 @@ nav a {
 }
 
 /* main section style */
-main{
-   max-width: 1140px;
-   margin: o auto;
+main {
+    max-width: 1140px;
+    margin: o auto;
 }
+
+main section {
+    margin-top: 130px;
+}
+
 /* about section style */
 .about {
     padding: 130px;
@@ -120,21 +126,89 @@ main{
     background: #FFF8F3;
     margin: 130px;
 }
-.section-descriptio{
+
+.section-descriptio {
     color: #757575;
-text-align: center;
-font-size: 18px;
-font-weight: 400;
+    text-align: center;
+    font-size: 18px;
+    font-weight: 400;
 }
-.about-info-container{
+
+.about-info-container {
     display: flex;
     justify-content: space-around;
 }
-.about-info{
+
+.about-info {
     text-align: center;
 
 }
-#what-i-do-description{
+
+/* wwat i do related style */
+#what-i-do-description {
     padding: 30px 150px;
-    
+
+}
+
+.skills-container {
+    display: flex;
+    gap: 24px;
+    margin: 130px;
+
+}
+
+.skills {
+    padding: 30px;
+
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+.skills-description {
+    color: #757575;
+
+}
+
+/* resume section */
+.resume-column-title {
+    color: #474747;
+
+    font-size: 30px;
+    font-weight: 700;
+
+}
+.resume-container{
+    display: flex;
+    gap: 50px;
+
+}
+.resume-item-descreption , .resume-item-institute{
+
+    color:  #757575;
+}
+.resume-item-title{
+    color: #474747;
+    font-size: 25px;
+    font-weight: 700
+    ;
+    margin-bottom: 10px;
+}
+.resume-container hr{
+   margin: 30px; 
+}
+.resume-item-institute{
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+}
+/* footer style */
+footer{
+    display: flex;
+    background: #FFF8F3;
+    margin-top: 100px;
+    padding: 130px 200px;
 }
