--- a/style/web.css
+++ b/style/web.css
@@ -62,9 +62,9 @@ nav a {
 /* header relatef style */
 .header {
     background-color: #fff8f3;
-    background-image: url('../images/header_bg.png');
+    background-image: url('../images/header_bg.png'),url('../images/developer.png') ;
     background-repeat: no-repeat;
-    background-position: bottom right;
+    background-position: bottom right , top ;
 }
 
 .banner {
@@ -181,6 +181,7 @@ main section {
 .resume-container{
     display: flex;
     gap: 50px;
+    margin: 130px;
 
 }
 .resume-item-descreption , .resume-item-institute{
@@ -208,7 +209,27 @@ main section {
 /* footer style */
 footer{
     display: flex;
+    gap: 100px;
+  
     background: #FFF8F3;
     margin-top: 100px;
     padding: 130px 200px;
+}
+.footer-colum{
+    width: 50%;
+}
+.contact-form input[type="text"],.contact-form input[type="email"], textarea{
+    display: flex;
+    margin-bottom: 25px;
+    padding: 18px 35px;
+    color: #757575;
+    border-radius: 5px;
+    background: #fff;
+    border: 0;
+    width: 100%;
+
+
+}
+.social-links a{
+    margin: 25px;
 }
